feat: add Stream Deck plugin integration
- Add official Elgato Stream Deck plugin for one-click Bluetooth connections
- Add CLI version of AutoHotkey script for programmatic use
- Update README with Stream Deck plugin documentation
- Add Stream Deck plugin files:
  - TypeScript/Node.js plugin implementation
  - Property Inspector for device configuration
  - AutoHotkey integration for Bluetooth connectivity
  - Visual feedback (success/error indicators)

The Stream Deck plugin allows users to connect their Bluetooth devices
with a single button press directly from their Elgato Stream Deck.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-﻿.claude/settings.local.json
+.claude/settings.local.json
+
+# Stream Deck Plugin
+streamdeck-plugin/node_modules/
+streamdeck-plugin/.sdPlugin/bin/*.js
+streamdeck-plugin/.sdPlugin/bin/*.js.map
+streamdeck-plugin/package-lock.json
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
