feat: revamp plugin directory structure and enhance functionality with new features and optimizations

--- a/streamdeck-plugin/com.chromusx.bluetooth-connector.sdPlugin/manifest.json
+++ b/streamdeck-plugin/com.chromusx.bluetooth-connector.sdPlugin/manifest.json
@@ -1,9 +1,9 @@
 {
 	"$schema": "https://schemas.elgato.com/streamdeck/plugins/manifest.json",
 	"Name": "Bluetooth Device Connector",
-	"Version": "1.0.1.0",
+	"Version": "1.0.3.0",
 	"Author": "chromusx",
-	"Description": "Quickly connect your Bluetooth devices with a single button press",
+	"Description": "Eliminate the hassle of navigating Windows Bluetooth settings! Connect or disconnect your Bluetooth devices instantly with a single button press. Perfect for streamers, content creators, and multitaskers who frequently switch between headphones, speakers, microphones, and other Bluetooth peripherals. Features real-time visual status indicators, audio feedback, and seamless multi-device support—all without interrupting your workflow.",
 	"URL": "https://github.com/ChromuSx/BluetoothDeviceConnector",
 	"Icon": "imgs/plugin-icon",
 	"CodePath": "bin/plugin.js",
@@ -23,12 +23,14 @@
 		"MinimumVersion": "6.9"
 	},
 	"UUID": "com.chromusx.bluetooth-connector",
+	"Category": "Bluetooth Device Connector",
+	"CategoryIcon": "imgs/category-icon",
 	"Actions": [
 		{
 			"Name": "Connect Bluetooth Device",
 			"UUID": "com.chromusx.bluetooth-connector.connect",
 			"Icon": "imgs/action-icon",
-			"Tooltip": "Connect to a Bluetooth device",
+			"Tooltip": "Toggle Bluetooth device connection with visual status indicators and audio feedback",
 			"States": [
 				{
 					"Image": "imgs/key-disconnected",
