--- a/streamdeck-plugin/tsconfig.json
+++ b/streamdeck-plugin/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "outDir": "./.sdPlugin/bin",
+    "outDir": "./com.chromusx.bluetooth-connector.sdPlugin/bin",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
